# Warehouse_system_management_with_GUI-

project/src/models/: Admin.cpp  Product.cpp  Product.h  Staff.cpp  User.cpp  User.h
warehouse/Warehouse/: CMakeLists.txt
warehouse/Warehouse/data/: anything.csv  departments.csv  electronics.csv  lequied.csv  logs.csv  transactions.csv  users.csv
warehouse/Warehouse/src/: main.cpp
warehouse/Warehouse/src/core/: FileManager.cpp  FileManager.h  Warehouse.cpp  Warehouse.h
warehouse/Warehouse/src/gui/: DashboardWindow.cpp  DashboardWindow.h  LoginWindow.cpp  LoginWindow.h
warehouse/Warehouse/src/models/: Admin.h  Staff.h
